test/tests/compiler/18_structures/invalid_types/extra_credit/union_struct_conflicts/conflicting_tag_declarations.plx
#  It's illegal to specify struct and union types with the same tag in the same scope 
type struc x;
type union x;

pub fn main(none) i32 {
    return 0
}
